--- a/style.css
+++ b/style.css
@@ -15,8 +15,18 @@ h1 {
     font-size: 30px;
     border-bottom: double 5px black;
     text-align: center;
-p {
+}
+
+p { 
     font-size: 20px;
+    text-align: center;
+}
+
+iframe, video {
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    max-width: 700px;
 }
 
 
